--- a/src/templates/auth/password-reset.hbs
+++ b/src/templates/auth/password-reset.hbs
@@ -5,7 +5,7 @@
 
 <a href='{{url}}'>{{url}}</a>
 
-<p>This password reset token will expire in 60 minutes.</p>
+<p>This password reset token will expire in {{expires}} minutes.</p>
 
 <p>If you did not request a password reset, no further action is required.</p>
 
